tests/snapshots/examples_fixtures/type_system__failing__64_hm_inferred_call_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/64_hm_inferred_call_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 1st argument to `f` has the wrong type.

  --> examples/type_system/failing/64_hm_inferred_call_mismatch.flx:8:20
  |
8 |     let b: Int = f("x")
  |                    ^^^
  |                    --- this argument is `String`

Help:
  Expected `Int` as the 1st argument.
== stdout ==
<not executed>
